Design improvements and dark mode fixes

--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -25,7 +25,7 @@
   cursor: pointer;
   user-select: none;
   text-decoration: none;
-  color: #000
+  color: var(--text)
 }
 
 .comments__expandBtn__icon {
@@ -78,8 +78,8 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  border: 3px solid #000;
-  border-color: #000 transparent #000 transparent;
+  border: 3px solid var(--text);
+  border-color: var(--text) transparent var(--text) transparent;
   animation: spinner 1.2s linear infinite;
 }
 
