--- a/static/css/video.css
+++ b/static/css/video.css
@@ -69,7 +69,7 @@ li br {
 }
 
 .relVid__link {
-  color: #000;
+  color: var(--text);
 }
 
 .relVid__thumbnailWrapper {
